# docassemble-BetterIncludeDocxTemplate

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/BetterIncludeDocxTemplate/: better_include_docx_template.py
