[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.BetterIncludeDocxTemplate"
version = "1.0.0"
description = "A docassemble extension to improve the include_docx_template() function by making it accept booleans as keyword arguments."
readme = "README.md"
authors = [
    { name = "J. Kelton", email = "" },
]
dependencies = []
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
